--- a/Services/EasyTravel.Services/EasyTravel.Services.csproj
+++ b/Services/EasyTravel.Services/EasyTravel.Services.csproj
@@ -13,9 +13,15 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AngleSharp" Version="0.15.0" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.312" PrivateAssets="all">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Data\EasyTravel.Data.Common\EasyTravel.Data.Common.csproj" />
+    <ProjectReference Include="..\..\Data\EasyTravel.Data.Models\EasyTravel.Data.Models.csproj" />
   </ItemGroup>
 
 </Project>
