--- a/Web/EasyTravel.Web.ViewModels/EasyTravel.Web.ViewModels.csproj
+++ b/Web/EasyTravel.Web.ViewModels/EasyTravel.Web.ViewModels.csproj
@@ -23,4 +23,8 @@
     <ProjectReference Include="..\..\Services\EasyTravel.Services.Mapping\EasyTravel.Services.Mapping.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="NewFolder\" />
+  </ItemGroup>
+
 </Project>
