Implement parial view

--- a/Web/EasyTravel.Web/EasyTravel.Web.csproj
+++ b/Web/EasyTravel.Web/EasyTravel.Web.csproj
@@ -53,5 +53,8 @@
     <Content Update="wwwroot\img\xxx.jpg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Update="wwwroot\myImg\img.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 </Project>
