Implement booking view with server and client side validation.Implement custom attribute

--- a/Web/EasyTravel.Web.ViewModels/EasyTravel.Web.ViewModels.csproj
+++ b/Web/EasyTravel.Web.ViewModels/EasyTravel.Web.ViewModels.csproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Data\EasyTravel.Data.Models\EasyTravel.Data.Models.csproj" />
     <ProjectReference Include="..\..\Services\EasyTravel.Services.Mapping\EasyTravel.Services.Mapping.csproj" />
+    <ProjectReference Include="..\EasyTravel.Web.Infrastructure\EasyTravel.Web.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
