Deploy the app on azure

--- a/Web/EasyTravel.Web/EasyTravel.Web.csproj
+++ b/Web/EasyTravel.Web/EasyTravel.Web.csproj
@@ -8,12 +8,14 @@
 
   <PropertyGroup>
     <CodeAnalysisRuleSet>..\..\Rules.ruleset</CodeAnalysisRuleSet>
+    <ApplicationInsightsResourceId>/subscriptions/a0d64f53-b7db-46a3-a244-ee5d865d528c/resourceGroups/EasyTravelGroup/providers/microsoft.insights/components/Easy-Travell</ApplicationInsightsResourceId>
   </PropertyGroup>
   <ItemGroup>
     <AdditionalFiles Include="..\..\stylecop.json" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.15.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Facebook" Version="5.0.7" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="5.0.7" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.6" />
