--- a/Web/EasyTravel.Web/appsettings.json
+++ b/Web/EasyTravel.Web/appsettings.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "ConnectionStrings": {
     "DefaultConnection": "Server=.;Database=EasyTravel;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
@@ -9,5 +9,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ApplicationInsights": {
+    "ConnectionString": "InstrumentationKey=403240d6-4fa4-40de-98ef-c33b4ef52867;IngestionEndpoint=https://westeurope-4.in.applicationinsights.azure.com/"
+  }
 }
